# JohnnySolutions

./: .gitignore  DiceProblems.cabal
app/: Main.hs
src/: Lib.hs  ProbabilityMonad.hs
