name:                DiceProblems
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/DiceProblems#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ProbabilityMonad
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010
  other-modules:

executable solutions
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Wextra
  build-depends:       base
                     , DiceProblems
  default-language:    Haskell2010
  other-modules:

test-suite DiceProblems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DiceProblems
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/DiceProblems
